--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-pdf": "^4.0.3",
+    "@types/redux-thunk": "^2.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-pdf": "^4.1.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -35,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/react-redux": "7.1.7",
+    "@types/redux": "^3.6.0"
+  },
+  "proxy": "http://localhost:8080"
 }
